♿️ Fix contrast

--- a/main.css
+++ b/main.css
@@ -52,6 +52,7 @@ input {
   margin-bottom: 1.2rem;
   border-radius: 0.25em;
   border: 1px solid black;
+  color: white;
 }
 
 header {
